samples/_failures_safe/1761219545_607550_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad5585e1.c: In function ‘main’:
./samples/SAFE/__tmp_ad5585e1.c:160:5: error: expected declaration or statement at end of input
  160 |     for (size_t i = 0; i < compressed_size && i < 32; i++) {
      |     ^~~
./samples/SAFE/__tmp_ad5585e1.c:160:5: error: expected declaration or statement at end of input
